package tp;

import tp.person.Doctor;
import tp.person.Patient;

import java.time.LocalDateTime;
import java.util.Scanner;

public class Duke {
    public Duke() {
    }

    public void run() {
    }

    public static void main(String[] args) {
        new Duke().run();
    }

}
